# ml_in_ms_wt25

./: .gitignore  README.md  main.py  pyproject.toml
01_ex/: evaluate_python_skills.ipynb  install_LLM.ipynb  prompt_LLMs.ipynb
01_hack/: data.ipynb  template_ml_computer_vision.ipynb  template_ml_regression.ipynb
02_ex/: first_ml_pipeline.ipynb  python_abcs.ipynb  python_xyzs.ipynb
02_hack/: deploy_images.py  deploy_values.py  nn_values.ipynb
03_ex/: data.ipynb  wikipedia_api.ipynb
04_ex/: 2d_reduction_using_UMAP.ipynb  balance_data_and_save.ipynb  outlier_detection.ipynb
05_ex/: fingerprints.ipynb  one_hot_encoding.ipynb  pytorch_embeddings.ipynb  synthesize_your_own_data.ipynb
06_ex/: loss_functions.ipynb  multi_dim_arrays.ipynb
07_ex/: step-by-step-linear-regression.ipynb
08_ex/: autoML.ipynb  flaml.ipynb
09_ex/: my_first_nn.ipynb
10_ex/: backprop.ipynb  streamlit.py
